// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LegacyPlanBanner /> should render the legacy plan banner 1`] = `
<div>
  <div
    class="alert error legacyExpirationAlert"
  >
    <div
      class="iconContainer"
    >
      <img
        alt="icon"
        class="icon"
        src="test-file-stub"
      />
    </div>
    <div
      class="content"
    >
      <span
        class="label"
      >
        You are subscribed to a legacy plan. New features are only
                available on our new plans. Reach out to our support team with any questions.
      </span>
      <div
        class="customActions"
      >
        <a
          class="actionLink"
          to="/app/settings/billing/plans"
        >
          See all new plans.
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LegacyPlanBanner /> should render the legacy plan banner 2`] = `
<div>
  <div
    class="alert error legacyExpirationAlert"
  >
    <div
      class="iconContainer"
    >
      <img
        alt="icon"
        class="icon"
        src="test-file-stub"
      />
    </div>
    <div
      class="content"
    >
      <span
        class="label"
      >
        You are subscribed to a legacy plan. New features are only
                available on our new plans.
      </span>
      <div
        class="customActions"
      >
        <a
          class="actionLink"
          to="#"
        >
          Reach out to support
        </a>
      </div>
    </div>
  </div>
</div>
`;
